fixed a bug with static image cropping
there was an issue where the image could not be cropped if the original image hadn't been changed. This has since been resolved.

--- a/styles/style.css
+++ b/styles/style.css
@@ -201,6 +201,7 @@ select{
 .editWindowRow .fa-question{
 	color: #999;	
 	float: left;
+	margin-left: -10px;
 	font-size: 12px;
 	cursor: help;
 }
@@ -624,6 +625,7 @@ div.logo_container{
 	font-size: 16px;
 	margin-bottom: 5px;
 	margin-right: 15px;
+	float: left;
 }
 .editWindow h1{
 	font-size: 28px;
